--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
         <div class="calculator">
             <form>
                 <div class="display">
-                    <input type="text" name="display">
+                    <input type="text" name="display" id="input">
                 </div>
 
                 <div>
-                    <input type="button" value="AC">
-                    <input type="button" value="AE">
-                    <input type="button" value=".">
-                    <input type="button" value="/">
+                    <input type="button" value="AC" id="btnAdd">
+                    <input type="button" value="CC" id="btnClear">
+                    <input type="button" value="." id="btnPoint">
+                    <input type="button" value="/" id="btnDivide">
                 </div>
 
                 <div>
-                    <input type="button" value="7">
-                    <input type="button" value="8">
-                    <input type="button" value="9">
-                    <input type="button" value="*">
+                    <input type="button" value="7" id="btn7">
+                    <input type="button" value="8" id="btn8">
+                    <input type="button" value="9" id="btn9">
+                    <input type="button" value="*" id="btnMultiply">
                 </div>
 
                 <div>
-                    <input type="button" value="4">
-                    <input type="button" value="5">
-                    <input type="button" value="6">
-                    <input type="button" value="-">
+                    <input type="button" value="4" id="btn4">
+                    <input type="button" value="5" id="btn5">
+                    <input type="button" value="6" id="btn6">
+                    <input type="button" value="-" id="btnMinus">
                 </div>
 
                 <div>
-                    <input type="button" value="1">
-                    <input type="button" value="2">
-                    <input type="button" value="3">
-                    <input type="button" value="+">
+                    <input type="button" value="1" id="btn1">
+                    <input type="button" value="2" id="btn2">
+                    <input type="button" value="3" id="btn3">
+                    <input type="button" value="+" id="btnPlus">
                 </div>
 
                 <div class="last">
-                    <input type="button" value="00">
-                    <input type="button" value="0">
-                    <input type="button" value="=" class="equal">
+                    <input type="button" value="00" id="btnZeroZero">
+                    <input type="button" value="0" id="btnZero">
+                    <input type="button" value="=" class="equal" id="btnEqual">
                 </div>
             </form>
         </div>
