--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
         <div class="calculator">
             <form>
                 <div class="display">
-                    <input type="text" name="display" id="input">
+                    <input type="text" name="display" id="btnInput">
                 </div>
 
                 <div>
-                    <input type="button" value="AC" id="btnAdd">
-                    <input type="button" value="CC" id="btnClear">
-                    <input type="button" value="." id="btnPoint">
-                    <input type="button" value="/" id="btnDivide">
+                    <input type="button" value="AC" id="btnAdd" class="btn-num2">
+                    <input type="button" value="CC" id="btnClear" class="btn-num2">
+                    <input type="button" value="." id="btnPoint" class="btn-num2">
+                    <input type="button" value="/" id="btnDivide" class="btn-num2">
                 </div>
 
                 <div>
-                    <input type="button" value="7" id="btn7">
-                    <input type="button" value="8" id="btn8">
-                    <input type="button" value="9" id="btn9">
-                    <input type="button" value="*" id="btnMultiply">
+                    <input type="button" value="7" id="btn7" class="btn-num">
+                    <input type="button" value="8" id="btn8" class="btn-num">
+                    <input type="button" value="9" id="btn9" class="btn-num">
+                    <input type="button" value="*" id="btnMultiply" class="btn-num2">
                 </div>
 
                 <div>
-                    <input type="button" value="4" id="btn4">
-                    <input type="button" value="5" id="btn5">
-                    <input type="button" value="6" id="btn6">
-                    <input type="button" value="-" id="btnMinus">
+                    <input type="button" value="4" id="btn4" class="btn-num">
+                    <input type="button" value="5" id="btn5" class="btn-num">
+                    <input type="button" value="6" id="btn6" class="btn-num">
+                    <input type="button" value="-" id="btnMinus" class="btn-num2">
                 </div>
 
                 <div>
-                    <input type="button" value="1" id="btn1">
-                    <input type="button" value="2" id="btn2">
-                    <input type="button" value="3" id="btn3">
-                    <input type="button" value="+" id="btnPlus">
+                    <input type="button" value="1" id="btn1" class="btn-num">
+                    <input type="button" value="2" id="btn2" class="btn-num">
+                    <input type="button" value="3" id="btn3" class="btn-num">
+                    <input type="button" value="+" id="btnPlus" class="btn-num2">
                 </div>
 
                 <div class="last">
-                    <input type="button" value="00" id="btnZeroZero">
-                    <input type="button" value="0" id="btnZero">
+                    <input type="button" value="00" id="btnZeroZero" class="btn-num2">
+                    <input type="button" value="0" id="btnZero" class="btn-num2">
                     <input type="button" value="=" class="equal" id="btnEqual">
                 </div>
             </form>
